theme_dark.scss
/*-- scss:defaults --*/

$pink: #A100A6;
$red-dark: #FF9B8D;
$red-medium: #F17B74;
$red: #FF5E50;
$red-brick: #E87872;
$red-orange: #C96B26;
$orange-dark: #923900;
$orange-light: #6F2C00;
$orange: #802F00;
$orange-soft: #772900;
$brown-red: #A97315;
$brown-pink: #776363;
$purple: #7F7EB3;
$lavender-dark: #68748A;
$lavender: #666B87;
$brown-dark: #7A7A56;
$brown-green: #5B5C2D;
$green-dark: #71825F;
$green: #62744E;
$blue-black: #ADB5BC;
$blue-blackish: #8D99A8;
$blue-dark: #667E95;
$blue-darker: #758BAE;
$blue-lavender: #607283;
$blue-purple: #6F7F8F;
$blue: #61899D;
$turquoise: #4998AF;
$blue-light: #346767;
$black: #FFFFFF;
$black-soft: #E4E4E4;
$grey-black: #B5BCC3;
$grey-dark: #B3B3B3;
$grey-darkish: #A4AAAF;
$grey-bluish: #A0A8B7;
$brown-dark: #969696;
$grey-somber: #2C2C2C;
$grey-brown: #222222;
$grey: #1A1C1F;
$grey-blue: #1E2428;
$grey-light: #161A1D;
$grey-dull: #17161C;
$grey-pink: #1D191E;
$grey-pinker: #1A1010;
$grey-medium: #171717;
$white-off: #0D0D07;
$whitish: #000606;
$white-soft: #0D1014;
$white-pink: #070809;
$white-dull: #111115;
$white-orange: #140A00;
$white: #000000;

